--- a/Login/Base.lproj/Main.storyboard
+++ b/Login/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Log IN"/>
                                 <connections>
-                                    <segue destination="46O-ec-CGj" kind="show" id="EU0-Pz-D0I"/>
+                                    <action selector="logInPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="7ut-bq-hSV"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="rft-aa-rNM">
@@ -36,7 +36,7 @@
                                             <action selector="forgotAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dwa-Ge-skW"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tke-Lz-NBJ">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tke-Lz-NBJ">
                                         <rect key="frame" x="154.5" y="0.0" width="133.5" height="28"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -77,10 +77,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="forgotPasswordButton" destination="Tke-Lz-NBJ" id="R4A-mF-L8t"/>
-                        <outlet property="forgotUserNameButton" destination="R1V-17-sKD" id="DTE-9k-JAY"/>
                         <outlet property="passwordTF" destination="dgh-nu-Mux" id="PSh-5c-QmK"/>
                         <outlet property="usernameTF" destination="pTO-IE-1yh" id="zme-Qs-6KJ"/>
+                        <segue destination="46O-ec-CGj" kind="presentation" identifier="showWelcomeVC" id="dX1-jJ-1v8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
